<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Основные -->
    <string name="app_name">Классический интерфейс</string>
    <string name="logo_desc">Логотип приложения</string>

    <!-- Экраны старого приложения -->
    <string name="title_login">Вход</string>
    <string name="title_register">Регистрация</string>
    <string name="title_menu">Меню</string>
    <string name="title_profile">Профиль</string>
    <string name="title_settings">Настройки</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_name">Имя</string>
    <string name="hint_surname">Фамилия</string>
    <string name="hint_email">Email</string>
    <string name="btn_login">Войти</string>
    <string name="btn_register">Регистрация</string>
    <string name="btn_register_submit">Зарегистрироваться</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_exit">Выход</string>
    <string name="btn_settings">Настройки</string>
    <string name="btn_profile">Профиль</string>
    <string name="btn_report">Отчёт</string>
    <string name="btn_start">Приветствие</string>
    <string name="btn_users">Список пользователей</string>
    <string name="label_name">Имя</string>
    <string name="label_surname">Фамилия</string>
    <string name="label_login">Логин</string>
    <string name="label_email">Email</string>
    <string name="greeting_fmt">Здравствуйте, %1$s!</string>
    <string name="night_mode">Тёмная тема</string>
    <string name="day_night_desc">Переключение темы</string>
    <string name="no_data">Нет данных</string>
    <string name="toast_empty_fields">Заполните все поля</string>
    <string name="toast_invalid_date">Неверный формат даты (ДД.ММ.ГГГГ)</string>
    <string name="toast_login_success">Вход выполнен</string>
    <string name="toast_reg_success">Регистрация пройдена</string>
    <string name="toast_start">Приложение запущено</string>
    <string name="toast_no_app">Приложение не установлено</string>

    <!-- Лабораторная работа №3: классический подход -->
    <string name="hello_text">Hello!</string>
    <string name="btn_press">Нажми!</string>
    <string name="btn_pressed">НАЖАТО!</string>
    <string name="btn_continue">Продолжить</string>
    <string name="hint_fio">ФИО</string>
    <string name="hint_birth">Дата рождения (ДД.ММ.ГГГГ)</string>
    <string name="label_gender">Пол</string>
    <string name="gender_m">М</string>
    <string name="gender_f">Ж</string>
    <string name="label_avatar">Аватар (клик по картинке для смены)</string>
    <string name="title_users">Список пользователей</string>
    <string name="btn_add">Добавить!</string>
    <string name="log_press">Кнопка нажата</string>
    <string name="log_avatar">Аватар изменён</string>
    <string name="log_registered">Пользователь зарегистрирован</string>
    <string name="log_cancel">Регистрация отменена</string>
    <string name="log_added">Добавлен пользователь</string>
</resources>